# genossi

./: .env  .env.oidc.example  .gitignore  CLAUDE.md  Cargo.toml  OIDC-CONFIG.md  OIDC-TROUBLESHOOTING.md  build-oidc-backend.sh  cli-update-version.sh  default.nix  deploy-binaries.sh  example-config.nix  flake.nix  gen-backend.sh  module-fixed.nix  module-simple.nix  module.nix  run-vm.sh  test-oidc-config.nix  test-simple-config.nix  test_datetime.rs  test_handler.rs
.sqlx/: query-01d739f4c8937f8dbd95efcd50effd5db6d000d62e6a9715dc7d7c59dc161d34.json  query-07b11843d3c5baad24b359e24bcabf864100dd47c4e7af2a11c8cb2a0615c9ee.json  query-357ac1454f9908683e45061a209e06f10b01b95af83cbcbce4bc9f8150c36d9e.json  query-4e9ddf9845230f70d90a7cba6750473e0d1d1597d04417f2babdbf475baeb065.json  (+17 more)
genossi_bin/: Cargo.toml
genossi_bin/src/: lib.rs  main.rs
genossi_bin/tests/: e2e_tests.rs
genossi_config/: Cargo.toml
genossi_config/src/: dao.rs  dao_sqlite.rs  rest.rs  service.rs
genossi_dao_impl_sqlite/: Cargo.toml
genossi_dao_impl_sqlite/src/: lib.rs  member.rs  member_action.rs  member_document.rs  permission.rs  transaction.rs  user_preference.rs
genossi_mail/: Cargo.toml
genossi_mail/src/: dao.rs  dao_sqlite.rs  lib.rs  rest.rs  service.rs  template.rs  worker.rs
genossi_rest/: Cargo.toml
genossi_rest/src/: auth.rs  auth_middleware.rs  dev.rs  lib.rs  member.rs  member_action.rs  member_document.rs  permission.rs  session.rs  template.rs  user_preference.rs  validation.rs
genossi_rest_types/: Cargo.toml
genossi_rest_types/src/: lib.rs
genossi_service/: Cargo.toml
genossi_service/src/: claim_context.rs  claim_utils.rs  document_storage.rs  lib.rs  member.rs  member_action.rs  member_document.rs  member_import.rs  permission.rs  template.rs  user_preference.rs  user_service.rs  uuid_service.rs  validation.rs
genossi_service_impl/: Cargo.toml
genossi_service_impl/src/: document_storage.rs  lib.rs  macros.rs  member.rs  member_action.rs  member_document.rs  member_import.rs  pdf_generation.rs  permission.rs  session.rs  template_storage.rs  user_preference.rs  user_service.rs  uuid_service.rs  validation.rs
inventurly-frontend/: CLAUDE.md  Cargo.toml  Dioxus.toml  default-simple.nix  default-working.nix  default.nix  flake.nix  result-flake  shell.nix
inventurly-frontend/assets/: config.json  tailwind.css
inventurly-frontend/rest-types/src/: lib.rs
inventurly-frontend/src/: api.rs  app.rs  error.rs  js.rs  loader.rs  router.rs
inventurly-frontend/src/component/: barcode_scanner.rs  change_status_modal.rs  container_form.rs  container_list.rs  container_rack_form.rs  custom_entry_form.rs  custom_entry_list.rs  custom_entry_management_list.rs  duplicate_config_form.rs  duplicate_match.rs  duplicate_results_list.rs  error_view.rs  expandable_section.rs  footer.rs  inventur_form.rs  inventur_list.rs  inventur_statistics.rs  inventur_status_badge.rs  measurement_form.rs  measurement_list.rs  mod.rs  product_form.rs  product_list.rs  product_rack_form.rs  product_racks.rs  qr_code.rs  quick_measure_form.rs  rack_containers.rs  rack_form.rs  rack_list.rs  rack_product_measure_list.rs  rack_products.rs  searchable_product_selector.rs  similarity_score_bar.rs  tara_modal.rs  top_bar.rs
inventurly-frontend/src/i18n/: cs.rs  de.rs  en.rs  mod.rs
inventurly-frontend/src/page/: access_denied.rs  container_details.rs  containers.rs  custom_entries.rs  duplicate_detection.rs  home.rs  inventur_details.rs  inventur_measurements.rs  inventur_qr_codes.rs  inventur_rack_measure.rs  inventur_rack_selection.rs  inventur_results.rs  inventur_token_login.rs  inventurs.rs  mod.rs  not_authenticated.rs  permissions.rs  product_details.rs  products.rs  rack_details.rs  racks.rs
inventurly-frontend/src/service/: auth.rs  config.rs  container.rs  container_rack.rs  custom_entry.rs  duplicate_detection.rs  error.rs  i18n.rs  inventur.rs  mod.rs  permission.rs  product.rs  product_rack.rs  rack.rs  tara.rs
inventurly-frontend/src/state/: auth_info.rs  container.rs  container_rack.rs  custom_entry.rs  duplicate_detection.rs  inventur.rs  mod.rs  permission.rs  product.rs  product_rack.rs  rack.rs
inventurly-frontend/src/tests/: error_tests.rs  integration_tests.rs  mod.rs  week_tests.rs
inventurly_bin/: Cargo.toml
inventurly_bin/src/: lib.rs  main.rs
inventurly_bin/tests/: csv_import_e2e_tests.rs  duplicate_detection_e2e_tests.rs  e2e_tests.rs  price_import_e2e_tests.rs  product_e2e_tests.rs  simple_integration_tests.rs
inventurly_dao_impl_sqlite/: Cargo.toml
inventurly_dao_impl_sqlite/src/: container.rs  container_rack.rs  inventur.rs  inventur_custom_entry.rs  inventur_measurement.rs  lib.rs  permission.rs  person.rs  product.rs  product_rack.rs  rack.rs  transaction.rs
inventurly_rest/: Cargo.toml
inventurly_rest/src/: auth.rs  auth_middleware.rs  container.rs  container_rack.rs  csv_import.rs  deposit_ean_import.rs  duplicate_detection.rs  inventur.rs  inventur_custom_entry.rs  inventur_measurement.rs  inventur_report.rs  lib.rs  permission.rs  person.rs  price_import.rs  product.rs  product_rack.rs  rack.rs  session.rs  test_server.rs
inventurly_rest/tests/: integration_tests.rs
inventurly_rest_types/: Cargo.toml
inventurly_rest_types/src/: lib.rs
inventurly_service/: Cargo.toml
inventurly_service/src/: auth_types.rs  claim_context.rs  claim_utils.rs  container.rs  container_rack.rs  csv_import.rs  deposit_ean_import.rs  duplicate_detection.rs  inventur.rs  inventur_custom_entry.rs  inventur_measurement.rs  inventur_report.rs  lib.rs  permission.rs  person.rs  price_import.rs  product.rs  product_rack.rs  rack.rs  session.rs  user_service.rs  uuid_service.rs
inventurly_service_impl/: Cargo.toml
inventurly_service_impl/src/: container.rs  container_rack.rs  csv_import.rs  deposit_ean_import.rs  duplicate_detection.rs  inventur.rs  inventur_custom_entry.rs  inventur_measurement.rs  inventur_report.rs  lib.rs  macros.rs  permission.rs  person.rs  price_import.rs  product.rs  product_rack.rs  rack.rs  session.rs  user_service.rs  uuid_service.rs
(+294 files in other folders)
