[workspace]
members = [
    "genossi_dao",
    "genossi_dao_impl_sqlite",
    "genossi_service",
    "genossi_service_impl",
    "genossi_rest",
    "genossi_rest_types",
    "genossi_bin",
    "genossi_config",
    "genossi_mail",
]
resolver = "2"
exclude = ["genossi-frontend", ".claude/worktrees/codemirror-template-editor/genossi-frontend", ".claude/worktrees/smtp-config-ui/genossi-frontend", ".claude/worktrees/typst-syntax-highlighting/genossi-frontend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8.3", features = ["multipart"] }
mockall = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
utoipa = { version = "5.0", features = ["axum_extras", "time", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "vendored"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
dotenv = "0.15"
tower-cookies = "0.10"
tower-sessions = "0.14"
calamine = "0.26"
axum-oidc = "0.6"
http = "1.1"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
typst = "0.14"
typst-pdf = "0.14"
