[package]
name = "inventurly_dao_impl_sqlite"
version.workspace = true
edition.workspace = true

[dependencies]
inventurly_dao = { path = "../inventurly_dao" }
async-trait = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }