[package]
name = "inventurly_rest"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
inventurly_dao = { path = "../inventurly_dao" }
inventurly_service = { path = "../inventurly_service", features = ["utoipa"] }
inventurly_rest_types = { path = "../inventurly_rest_types" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
time = { workspace = true }
tower-cookies = { workspace = true }
tower-sessions = { workspace = true }
axum-oidc = { workspace = true, optional = true }
http = { workspace = true }

[features]
default = ["mock_auth"]
mock_auth = []
oidc = ["dep:axum-oidc"]

[dev-dependencies]
tower = { workspace = true }
tower-http = { workspace = true }
time = { workspace = true }
