[package]
name = "inventurly_rest_types"
version.workspace = true
edition.workspace = true

[dependencies]
inventurly_service = { path = "../inventurly_service" }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }