[package]
name = "inventurly_service"
version.workspace = true
edition.workspace = true

[dependencies]
inventurly_dao = { path = "../inventurly_dao" }
async-trait = { workspace = true }
mockall = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
utoipa = { workspace = true, optional = true }

[features]
default = ["mock_auth"]
mock_auth = []
oidc = []
utoipa = ["dep:utoipa"]