[package]
name = "inventurly_service_impl"
version.workspace = true
edition.workspace = true

[features]
default = ["mock_auth"]
mock_auth = ["inventurly_service/mock_auth"]
oidc = ["inventurly_service/oidc"]

[dependencies]
inventurly_dao = { path = "../inventurly_dao" }
inventurly_service = { path = "../inventurly_service" }
async-trait = { workspace = true }
csv = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
strsim = { workspace = true }
rand = { workspace = true }